--- a/index1.html
+++ b/index1.html
@@ -15,14 +15,14 @@
   <title>Welcome Migrapp</title>
 
   <!-- update the version number as needed -->
-  <script defer src="/__/firebase/5.5.5/firebase-app.js"></script>
+  <!-- <script defer src="/__/firebase/5.5.5/firebase-app.js"></script> -->
   <!-- include only the Firebase features as you need -->
-  <script defer src="/__/firebase/5.5.5/firebase-auth.js"></script>
+  <!-- <script defer src="/__/firebase/5.5.5/firebase-auth.js"></script>
   <script defer src="/__/firebase/5.5.5/firebase-database.js"></script>
   <script defer src="/__/firebase/5.5.5/firebase-messaging.js"></script>
-  <script defer src="/__/firebase/5.5.5/firebase-storage.js"></script>
+  <script defer src="/__/firebase/5.5.5/firebase-storage.js"></script> -->
   <!-- initialize the SDK after all desired features are loaded -->
-  <script defer src="/__/firebase/init.js"></script>
+  <!-- <script defer src="/__/firebase/init.js"></script> -->
   <script src="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.js"></script>
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.css" />
 </head>
@@ -130,15 +130,15 @@
   </section>
 
   <!-- Pintura del chat -->
-  <!-- <section class="container-fluid" id="welcomeUser">
+   <section class="container-fluid" id="welcomeUser">
     <div id="userLogin"></div>
     <p id="out" style="text-align: left">
       <u>Sign Out</u>
     </p>
 
-    <div class="chatZone"> -->
+    <div class="chatZone"> 
       <!--Aquí se imprimen los mensajes-->
-      <!-- <div id="messageContainer"></div>
+       <div id="messageContainer"></div>
       <div class="row">
         <div class="col-sm-4" id="mapContent"></div>
       </div>
@@ -157,7 +157,7 @@
         <i class="fas fa-map-marker-alt" id="mapIcon"></i>
       </div>
     </div>
-  </section> -->
+  </section> 
   
   <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
   <script>
