--- a/index2.html
+++ b/index2.html
@@ -15,12 +15,12 @@
   <title>Welcome Migrapp</title>
 
   <!-- update the version number as needed -->
-  <script defer src="/__/firebase/5.5.5/firebase-app.js"></script>
+  <!-- <script defer src="/__/firebase/5.5.5/firebase-app.js"></script> -->
   <!-- include only the Firebase features as you need -->
-  <script defer src="/__/firebase/5.5.5/firebase-auth.js"></script>
+  <!-- <script defer src="/__/firebase/5.5.5/firebase-auth.js"></script>
   <script defer src="/__/firebase/5.5.5/firebase-database.js"></script>
   <script defer src="/__/firebase/5.5.5/firebase-messaging.js"></script>
-  <script defer src="/__/firebase/5.5.5/firebase-storage.js"></script>
+  <script defer src="/__/firebase/5.5.5/firebase-storage.js"></script> -->
   <!-- initialize the SDK after all desired features are loaded -->
   <script defer src="/__/firebase/init.js"></script>
   <script src="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.js"></script>
@@ -102,8 +102,8 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="./js/index.js"></script>
-  <script src="./js/chat.js"></script>
-  <script src="./js/chatMain.js"></script>
+  <!-- <script src="./js/chat.js"></script>
+  <script src="./js/chatMain.js"></script> -->
   <script src="./js/regularizacionDescarga.js"></script>
   <script src="./js/page.js"></script>
   <script src="./js/botones.js"></script>
