--- a/index4.html
+++ b/index4.html
@@ -15,14 +15,14 @@
   <title>Welcome Migrapp</title>
 
   <!-- update the version number as needed -->
-  <script defer src="/__/firebase/5.5.5/firebase-app.js"></script>
+  <!-- <script defer src="/__/firebase/5.5.5/firebase-app.js"></script> -->
   <!-- include only the Firebase features as you need -->
-  <script defer src="/__/firebase/5.5.5/firebase-auth.js"></script>
+  <!-- <script defer src="/__/firebase/5.5.5/firebase-auth.js"></script>
   <script defer src="/__/firebase/5.5.5/firebase-database.js"></script>
   <script defer src="/__/firebase/5.5.5/firebase-messaging.js"></script>
-  <script defer src="/__/firebase/5.5.5/firebase-storage.js"></script>
+  <script defer src="/__/firebase/5.5.5/firebase-storage.js"></script> -->
   <!-- initialize the SDK after all desired features are loaded -->
-  <script defer src="/__/firebase/init.js"></script>
+  <!-- <script defer src="/__/firebase/init.js"></script> -->
   <script src="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.js"></script>
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.css" />
 </head>
